--- a/rpt/patient_clinical_sheet_ver3.jrxml
+++ b/rpt/patient_clinical_sheet_ver3.jrxml
@@ -33,7 +33,7 @@ SELECT CONCAT("Opd", " (", OPD_PROG_YEAR, ")") AS TYPE,
 	FROM 
 		OPD 
 		LEFT JOIN PATIENT ON (OPD_PAT_ID = PAT_ID) 
-	WHERE OPD_PAT_ID = $P{patientID} AND (OPD_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE OPD_PAT_ID = $P{patientID} AND (DATE(OPD_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
 	
 UNION
 
@@ -50,7 +50,7 @@ SELECT CONCAT("ADM", " (", ADM_YPROG, ")") AS TYPE,
 		LEFT JOIN ADMISSIONTYPE ON (ADMT_ID_A = ADM_ADMT_ID_A_ADM)
 		LEFT JOIN DISCHARGETYPE ON (DIST_ID_A = ADM_DIST_ID_A)
 	WHERE ADM_DELETED = 'N'
-		AND ADM_PAT_ID = $P{patientID} AND (ADM_DATE_ADM BETWEEN $P{Date_from} AND $P{Date_to})
+		AND ADM_PAT_ID = $P{patientID} AND (DATE(ADM_DATE_ADM) BETWEEN $P{Date_from} AND $P{Date_to})
 
 UNION
         SELECT "Examination" AS TYPE,
@@ -62,7 +62,7 @@ UNION
 	   PEX_NOTE AS NOTE
 	FROM 
 		PATIENTEXAMINATION
-WHERE PEX_PAT_ID = $P{patientID} AND (PEX_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+WHERE PEX_PAT_ID = $P{patientID} AND (DATE(PEX_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
 UNION
 
 SELECT "Drugs" AS TYPE,
@@ -78,7 +78,7 @@ SELECT "Drugs" AS TYPE,
 		FROM 
 			MEDICALDSRSTOCKMOVWARD  
 			LEFT JOIN MEDICALDSR ON (MMVN_MDSR_ID = MDSR_ID) 
-		WHERE MMVN_PAT_ID = $P{patientID} AND (MMVN_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+		WHERE MMVN_PAT_ID = $P{patientID} AND (DATE(MMVN_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
 		GROUP BY DATE(MMVN_DATE), MMVN_MDSR_ID
 	) AS MEDICALS
 GROUP BY DATE(DATE)
@@ -100,7 +100,7 @@ SELECT "Operations" AS TYPE,
 			LEFT JOIN OPD ON (OPER_OPD_ID = OPD_ID) 
 			LEFT JOIN ADMISSION ON (OPER_ADMISSION_ID = ADM_ID) 
 		WHERE (OPD_PAT_ID = $P{patientID} OR ADM_PAT_ID = $P{patientID}) 
-		  AND (OPER_OPDATE BETWEEN $P{Date_from} AND $P{Date_to})
+		  AND (DATE(OPER_OPDATE) BETWEEN $P{Date_from} AND $P{Date_to})
 		GROUP BY DATE(OPER_OPDATE)
 	) AS OPERATIONS
 GROUP BY DATE(DATE)
@@ -118,7 +118,7 @@ SELECT "Laboratory" AS TYPE,
 		LABORATORY  
 		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
 		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
-	WHERE LAB_PAT_ID = $P{patientID} AND (LAB_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
     AND EXA_PROC = 1
     
 UNION
@@ -134,7 +134,7 @@ SELECT "Laboratory" AS TYPE,
 		LABORATORY  
 		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
 		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
-	WHERE LAB_PAT_ID = $P{patientID} AND (LAB_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
 	AND EXA_PROC = 2
 GROUP BY LABR_LAB_ID
 
@@ -151,7 +151,7 @@ SELECT "Laboratory" AS TYPE,
 		LABORATORY  
 		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
 		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
-	WHERE LAB_PAT_ID = $P{patientID} AND (LAB_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
     AND EXA_PROC = 3
 	
 GROUP BY LABR_LAB_ID
@@ -298,7 +298,7 @@ ORDER BY DATE DESC]]>
 	<detail>
 		<band height="89" splitType="Stretch">
 			<textField textAdjust="StretchHeight" pattern="dd/MM/yyyy HH:mm" isBlankWhenNull="true">
-				<reportElement key="textField-1" x="0" y="21" width="65" height="13" uuid="e8b6c04a-0d0d-4fab-87b2-fde877b88b93"/>
+				<reportElement key="textField-1" x="0" y="21" width="70" height="13" uuid="e8b6c04a-0d0d-4fab-87b2-fde877b88b93"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -311,7 +311,7 @@ ORDER BY DATE DESC]]>
 				<textFieldExpression><![CDATA[$F{DATE}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
-				<reportElement key="textField-2" x="0" y="8" width="65" height="13" uuid="292fe642-de0a-4b47-ac03-8e0a5a2397b8"/>
+				<reportElement key="textField-2" x="0" y="8" width="70" height="13" uuid="292fe642-de0a-4b47-ac03-8e0a5a2397b8"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -324,35 +324,35 @@ ORDER BY DATE DESC]]>
 				<textFieldExpression><![CDATA[$F{TYPE}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" pattern="" isBlankWhenNull="true">
-				<reportElement key="textField-3" x="75" y="60" width="460" height="13" isRemoveLineWhenBlank="true" uuid="8c6b7e88-2a94-4b49-b949-1b0f9ac14e54"/>
+				<reportElement key="textField-3" x="80" y="60" width="455" height="13" isRemoveLineWhenBlank="true" uuid="8c6b7e88-2a94-4b49-b949-1b0f9ac14e54"/>
 				<textElement>
 					<font fontName="DejaVu Sans" isItalic="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{NOTE}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" pattern="" isBlankWhenNull="true">
-				<reportElement key="textField-4" stretchType="RelativeToBandHeight" x="75" y="8" width="460" height="13" uuid="953c5e45-2879-4d26-9db8-e2ffdf797a41"/>
+				<reportElement key="textField-4" stretchType="RelativeToBandHeight" x="80" y="8" width="455" height="13" uuid="953c5e45-2879-4d26-9db8-e2ffdf797a41"/>
 				<textElement>
 					<font fontName="DejaVu Sans" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{DETAILS_1}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" pattern="" isBlankWhenNull="true">
-				<reportElement key="textField-5" x="75" y="21" width="460" height="13" isRemoveLineWhenBlank="true" uuid="76b9dd4e-f6aa-421a-8577-4792fd3c2100"/>
+				<reportElement key="textField-5" x="80" y="21" width="455" height="13" isRemoveLineWhenBlank="true" uuid="76b9dd4e-f6aa-421a-8577-4792fd3c2100"/>
 				<textElement>
 					<font fontName="DejaVu Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{DETAILS_2}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" pattern="" isBlankWhenNull="true">
-				<reportElement key="textField-6" x="75" y="34" width="460" height="13" isRemoveLineWhenBlank="true" uuid="2970c65b-3f79-410d-9626-31b41af81994"/>
+				<reportElement key="textField-6" x="80" y="34" width="455" height="13" isRemoveLineWhenBlank="true" uuid="2970c65b-3f79-410d-9626-31b41af81994"/>
 				<textElement>
 					<font fontName="DejaVu Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{DETAILS_3}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" pattern="" isBlankWhenNull="true">
-				<reportElement key="textField-7" x="75" y="47" width="460" height="13" isRemoveLineWhenBlank="true" uuid="b3d2434d-c55b-48c0-aca2-edabd12aeeac"/>
+				<reportElement key="textField-7" x="80" y="47" width="455" height="13" isRemoveLineWhenBlank="true" uuid="b3d2434d-c55b-48c0-aca2-edabd12aeeac"/>
 				<textElement>
 					<font fontName="DejaVu Sans"/>
 				</textElement>
